--- a/DebugWindow.ui
+++ b/DebugWindow.ui
@@ -28,9 +28,15 @@
     <height>1024</height>
    </size>
   </property>
+  <property name="windowTitle">
+   <string>Debug Console</string>
+  </property>
   <property name="windowIcon">
-   <iconset>
-    <normaloff>:/Imgs/helmet.png</normaloff>:/Imgs/helmet.png</iconset>
+   <iconset resource="Resources.qrc">
+    <normaloff>:/Img/app_icon.png</normaloff>:/Img/app_icon.png</iconset>
+  </property>
+  <property name="windowOpacity">
+   <double>1.000000000000000</double>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,0">
@@ -193,14 +199,6 @@
     </item>
    </layout>
   </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-  </widget>
   <widget class="QStatusBar" name="statusBar">
    <property name="minimumSize">
     <size>
@@ -219,6 +217,8 @@
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="Resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
